--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     AWS_REGION: us-east-1
-    REPOSITORY_URI: 512138916710.dkr.ecr.us-east-1.amazonaws.com/organic
+    REPOSITORY_URI: 196638096527.dkr.ecr.us-east-1.amazonaws.com/dynamic
 
 phases:
   install:
@@ -25,7 +25,7 @@ phases:
       - echo Pushing image to ECR...
       - docker push $REPOSITORY_URI:latest
       - echo Creating imagedefinitions.json...
-      - printf '[{"name":"organic-container","imageUri":"%s"}]' $REPOSITORY_URI:latest > imagedefinitions.json
+      - printf '[{"name":"dynamic","imageUri":"%s"}]' $REPOSITORY_URI:latest > imagedefinitions.json
 
 artifacts:
   files:
